Add local backup and restore
